# pcg-random

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  default.nix  pcg-random.cabal  shell.nix
System/Random/: PCG.hs
benchmarks/: Benchmark.hs  random-benchmarks.cabal
nix/: sources.json
src/System/Random/: PCG.hs
src/System/Random/PCG/: Class.hs  Fast.hs  Pure.hs  Single.hs  Unique.hs
src/System/Random/PCG/Fast/: Pure.hs
test/: diehard-source.hs  doctest.hs
