name:                pcg-random
version:             0.1.0.0
synopsis:            Haskell intreface to the PCG random number generator.
description:         PCG is a family of simple fast space-efficient
                     statistically good algorithms for random number
                     generation with better-than-typical cryptographic
                     security.
                     .
                     This library impliments bindings to the standard C
                     implimentation.
                     .
                     There is a pure implimentation that can be used as a
                     generator with the random package as well as a
                     faster primitive (IO or ST) api that includes
                     functions for generating common types (Double, Bool
                     etc.) which is very similar to mwc-random.
                     .
                     The generators in this module are suitable for
                     parallel but make sure threads don't share the same
                     generator or things will go horrbly wrong.
license:             BSD3
license-file:        LICENSE
author:              Christopher Chalmers
maintainer:          c.chalmers@me.com
Homepage:            http://github.com/cchalmers/pcg-random
Bug-reports:         http://github.com/cchalmers/pcg-random/issues
copyright:           (c) 2014. Christopher Chalmers <c.chalmers@me.com>
category:            System
build-type:          Simple
cabal-version:       >=1.10
Source-repository head
  type:     git
  location: http://github.com/cchalmers/pcg-random

library
  exposed-modules:     System.Random.PCG,
                       System.Random.PCG.Class,
                       System.Random.PCG.Fast,
                       System.Random.PCG.Unique,
                       System.Random.PCG.Single
  hs-source-dirs:      src
  other-extensions:    BangPatterns, CPP, ForeignFunctionInterface, RoleAnnotations
  build-depends:       base >=4.7 && <4.8,
                       primitive >=0.5 && <0.6,
                       random >=1.1 && < 2.0,
                       time
  default-language:    Haskell2010
  cc-options:
    -DMEXP=19937
    -DNDEBUG
    -O3 -finline-functions -fomit-frame-pointer
    -fno-strict-aliasing

  ghc-options:     -Wall -O2

  c-sources:        c/pcg-advance-64.c c/pcg-global-64.c c/pcg-output-64.c c/pcg-rngs-64.c
  include-dirs:     c
  includes:         pcg_variants.h
  install-includes: pcg_variants.h
